--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
 
     <p>This is a simplist solution to a mobile-only web story. Users with no coding background should be able to use this template after a 10 minute crash course on HTML. One does not need to learn CSS, in order to make it work in a reasonable way.</p>
 
-    <h2> Features </h2>
+   <h2 style="
+    color: #2145d8;
+"> Features </h2>
 
     <p>
         "Big Road" has the following key features:
