--- a/index.html
+++ b/index.html
@@ -135,10 +135,22 @@
 
     <p>This is a simplist solution to a mobile-only web story. Users with no coding background should be able to use this template after a 10 minute crash course on HTML. One does not need to learn CSS, in order to make it work in a reasonable way.</p>
 
-   <h2 style="
-    color: #2145d8;
+<h2 style="
+    /* color: #2145d8; */
+    position: absolute;
+    width: 617px;
+    height: 43px;
+    left: -1px;
+    top: 266px;
+    line-height: 43px;
+    background: #2c2c2c;
+    padding: 0 10px;
+    overflow: hidden;
+    font-family: &quot;Georgia&quot;;
+    font-size: 22px;
+    font-weight: bold;
+    color: #ffe174;
 "> Features </h2>
-
     <p>
         "Big Road" has the following key features:
     </p>
