--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
 
     <h3>Image with caption</h3>
 
-    <figure>
-        <img src="images/screenshot-demo.png" alt="">
+ <figure>
+        <img src="https://p5.img.cctvpic.com/photoworkspace/2019/07/16/2019071608563090339.jpg" alt="">
         <figcaption>
-            <em> How "Big Road" looks like on mobile phone.</em>
-            <br> Source: screenshot
+            <em>an image borrowed from CCTV</em>
+            <br> Source: CCTV
         </figcaption>
     </figure>
 
