--- a/index.html
+++ b/index.html
@@ -190,10 +190,9 @@
         </figcaption>
     </figure>
 
-    <figure>
-        <img src="images/screenshot-demo.png" alt="">
-        <figcaption>
-            Sometimes, the caption can be very long which is a standalone story by itself. So you don't have to put the entire block into emphasis mode. Just <em>emaphsize the part you find most important</em>.
+<figure>
+        <img src="images/近一年猪肉相关CPI走势.png" alt="">
+        <figcaption>CPI.
         </figcaption>
     </figure>
 
