--- a/index.html
+++ b/index.html
@@ -195,6 +195,18 @@
         <figcaption>CPI.
         </figcaption>
     </figure>
+    
+    <figure>
+        <img src="images/北京市全年温度变化.png" alt="">
+        <figcaption>CPI.
+        </figcaption>
+    </figure>
+    
+    <figure>
+        <img src="images/北京市全年温度变化.png" alt="">
+        <figcaption>CPI.
+        </figcaption>
+    </figure>
 
     <p>Note, an image aspect ratio of 16:9 is recommended as a sensible default.</p>
 
